main.css
p {
  margin: 0;
  white-space: pre-wrap;
  -webkit-margin-before: 0px;
  -webkit-margin-after: 0px;
  -webkit-margin-start: 0px;
  -webkit-margin-end: 0px; }

body, html {
  height: 100%;
  margin: 0; }

input {
  font: 400 15px "Helvetica-Light", sans-serif;
  border: 0;
  padding: 0 15px;
  height: 10%;
  outline: 0; }
  input[type='text'] {
    height: 45px;
    float: left; }
  input[type='submit'] {
    width: sumbit_box_height;
    height: 45px;
    background: transparent;
    color: #0076FF;
    font-weight: 700;
    text-align: right;
    float: right; }

form.chat {
  margin: 0;
  cursor: default;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  overflow: hidden; }
  form.chat * {
    transition: all 0.5s;
    box-sizing: border-box; }

.Scrollable {
  max-height: 400px;
  overflow-y: scroll; }

.messages {
  display: block;
  overflow-x: hidden;
  position: relative;
  height: calc(100% - 110px);
  width: 100%;
  padding: 2% 3%; }

.message {
  display: block;
  width: 98%;
  padding: 0px;
  height: 0px; }

.message:hover date {
  opacity: 1;
  transform: translateY(15px);
  transition-delay: 0.5s; }
.message:hover .fromThem {
  transition-delay: 0.5s;
  box-shadow: 5px 8px 5px rgba(136, 136, 136, 0.81);
  margin-bottom: 35px;
  height: auto; }
.message:hover .myMessage {
  transition-delay: 0.5s;
  box-shadow: 5px 8px 5px rgba(136, 136, 136, 0.81);
  margin-bottom: 35px;
  height: auto; }

.myMessage {
  max-width: 75%;
  word-wrap: break-word;
  margin-bottom: 7px;
  margin-top: 7px;
  position: relative;
  padding: 8px 20px;
  color: white;
  border-radius: 25px;
  clear: both;
  font: 400 15px "Helvetica-Light", sans-serif;
  font-size: 14px;
  background: #0076FF;
  color: white;
  float: right;
  clear: both;
  border-bottom-right-radius: 20px 0px\9; }
  .myMessage:before {
    content: "";
    position: absolute;
    z-index: 1;
    bottom: -2px;
    right: -8px;
    height: 19px;
    border-right: 20px solid #0076FF;
    border-bottom-left-radius: 16px 14px;
    -webkit-transform: translate(0, -2px);
    transform: translate(0, -2px);
    border-bottom-left-radius: 15px 0px\9;
    transform: translate(-1px, -2px) \9; }
  .myMessage:after {
    content: "";
    position: absolute;
    z-index: 1;
    bottom: -2px;
    right: -42px;
    width: 12px;
    height: 20px;
    background: white;
    border-bottom-left-radius: 10px;
    -webkit-transform: translate(-30px, -2px);
    transform: translate(-30px, -2px); }
  .myMessage date {
    position: absolute;
    top: 10px;
    font-size: 14px;
    white-space: nowrap;
    vertical-align: middle;
    color: #8b8b90;
    opacity: 0;
    z-index: 4;
    left: 105%;
    top: 100%;
    left: auto;
    right: 0;
    font-size: 14px; }

.fromThem {
  max-width: 75%;
  word-wrap: break-word;
  margin-bottom: 4px;
  position: relative;
  padding: 8px 20px;
  color: white;
  border-radius: 25px;
  clear: both;
  font: 400 15px "Helvetica-Light", sans-serif;
  font-size: 14px;
  background: #E5E5EA;
  color: black;
  float: left;
  clear: both;
  border-bottom-left-radius: 30px 0px\9; }
  .fromThem ::-webkit-scrollbar {
    width: 10px;
    height: 18px; }
  .fromThem ::-webkit-scrollbar-track {
    background-color: #E5E5EA; }
  .fromThem ::-webkit-scrollbar-thumb {
    height: 6px;
    border-left: 4px solid rgba(0, 0, 0, 0);
    background-clip: padding-box;
    -webkit-border-radius: 4px;
    background-color: rgba(0, 0, 0, 0.15); }
  .fromThem ::-webkit-scrollbar-corner {
    background-color: transparent; }
  .fromThem:before {
    content: "";
    position: absolute;
    z-index: 2;
    bottom: -2px;
    left: -7px;
    height: 19px;
    border-left: 20px solid #E5E5EA;
    border-bottom-right-radius: 16px 14px;
    -webkit-transform: translate(0, -2px);
    transform: translate(0, -2px);
    border-bottom-right-radius: 15px 0px\9;
    transform: translate(-1px, -2px) \9; }
  .fromThem:after {
    content: "";
    position: absolute;
    z-index: 3;
    bottom: -2px;
    left: 4px;
    width: 26px;
    height: 20px;
    background: white;
    border-bottom-right-radius: 10px;
    -webkit-transform: translate(-30px, -2px);
    transform: translate(-30px, -2px); }
  .fromThem date {
    position: absolute;
    top: 10px;
    font-size: 14px;
    white-space: nowrap;
    vertical-align: middle;
    color: #8b8b90;
    opacity: 0;
    z-index: 4;
    right: 105%;
    top: 100%;
    left: 0;
    right: auto;
    font-size: 14px; }

span.spinner {
  animation: loading-bar 2s 1;
  display: block;
  height: 2px;
  background-color: #0076FF;
  transition: width 0.2s;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 4; }

@keyframes suggestionHover {
  0% {
    color: white; }
  100% {
    color: white;
    background: #0076FF;
    box-shadow: 3px 3px 5px rgba(136, 136, 136, 0.81); } }
@keyframes loading-bar {
  0% {
    width: 0%; }
  90% {
    width: 90%; }
  100% {
    width: 100%; } }
/* DEMO */
.iphone {
  width: 100%;
  height: 100%;
  background-size: 100% 100%;
  margin: 0 auto;
  position: relative; }

.border {
  position: absolute;
  top: 0%;
  right: 0%;
  left: 0%;
  bottom: 0%;
  overflow: hidden; }

a.article {
  position: fixed;
  bottom: 15px;
  left: 15px;
  display: table;
  text-decoration: none;
  color: white;
  background-color: #0076FF;
  padding: 10px 20px;
  border-radius: 25px;
  font: 400 15px "Helvetica-Light", sans-serif; }

#suggestionBox {
  width: 100%;
  height: 60px;
  padding: 14px;
  display: inline-block;
  border-bottom: 1px solid #ecf0f1;
  border-top: 1px solid #ecf0f1;
  overflow: hidden;
  white-space: nowrap;
  bottom: 52px; }

.suggestion {
  margin-bottom: 0px;
  margin-right: 10px;
  position: relative;
  padding: 8px 20px;
  border-radius: 25px;
  clear: both;
  font: 400 15px "Helvetica-Light", sans-serif;
  font-size: 14px;
  background: #a3e9ff;
  color: #616161;
  display: inline-flex; }

.suggestion:hover {
  animation: suggestionHover 0.4s forwards ease; }

#inputBox {
  height: 40px;
  width: 100%;
  position: absolute;
  bottom: 7px; }

#messageInput {
  height: 45px;
  width: calc(100% - 65px);
  position: absolute;
  background: rgba(0, 0, 0, 0); }

#suggestionOverlay {
  height: 45px;
  width: calc(100% - 65px);
  position: absolute;
  color: gray; }

.monospaced {
  font-family: monospace;
  overflow: auto;
  white-space: pre; }

/*# sourceMappingURL=main.css.map */

